<resources>
    <string name="app_name">Taschenrechner</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="float_point">.</string>
    <string name="plus_minus">+/-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="clear">C</string>
    <string name="dmInEuro">€</string>
    <string name="result">=</string>
    <string name="inverse">1/x</string>
    <string name="square">x^2</string>
    <string name="squareRoot">\u221a</string>
    <string name="faculty">X!</string>
    <string name="sinus">SIN</string>
    <string name="cosinus">COS</string>
    <string name="tangens">TAN</string>
    <string name="pi">\u03C0</string>
    <string name="logarithm">LOG</string>
    <string name="exponent">E^X</string>
    <string name="evaluationErrorMessage">Unable to evaluate expression</string>
    <string name="enterStuffMessage">Please enter expression to evaluate</string>
</resources>
